--- a/index.html
+++ b/index.html
@@ -13,8 +13,45 @@
 
 <body>
 
-    <h1 id="header"  onclick="changeColor()">To do Input</h1>
+    <section class="container">
 
+        <h1>To do input</h1>
+        <div class="inputContainer">   
+            <div class="inputContainerContent">
+                <input id="mainInput">
+                <br>
+                <button id="inputButton">Add new Task</button>
+            </div>
+        </div>
+
+        <h1>To do list</h1>
+        <div class="listContainer">
+            <div class="tabsContainer">
+                <button>All</button>
+                <button>Done</button>
+                <button>ToDo</button>
+            </div>
+
+            <div class="scrollContainer">
+                <div>
+                    <h3>Scroll box to do</h3>
+                    <h3>Scroll box to do</h3>
+                    <h3>Scroll box to do</h3>
+                    <h3>Scroll box to do</h3>
+                    <h3>Scroll box to do</h3>
+                    <h3>Scroll box to do</h3>
+                    <h3>Scroll box to do</h3>
+
+                </div>
+            </div>
+
+            <div class="deleteContainer">
+                <button>Delete Done Tasks</button>
+                <button>Delete All Tasks</button>
+            </div>
+        </div>
+    </section>
+    
 
 
 
