Added scroll element and added icons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <h1>To do input</h1>
         <div class="inputContainer">   
             <div class="inputContainerContent">
-                <input id="mainInput">
+                <div>
+                    <img class="inputIcon" src="./sourceImages/icons/book-solid_icon.svg" alt="book icon">
+                    <input id="mainInput" placeholder="New todo">
+                </div>
+                
                 <br>
                 <button id="inputButton">Add new Task</button>
             </div>
@@ -33,15 +37,15 @@
             </div>
 
             <div class="scrollContainer">
-                <div>
-                    <h3>Scroll box to do</h3>
-                    <h3>Scroll box to do</h3>
-                    <h3>Scroll box to do</h3>
-                    <h3>Scroll box to do</h3>
-                    <h3>Scroll box to do</h3>
-                    <h3>Scroll box to do</h3>
-                    <h3>Scroll box to do</h3>
+                <div class="task" id="9999">
+                    
+                    <p>Contadasdasdadasdasdsadasdadadsadsent</p>
 
+                    <div class="icons">
+                        <input type="checkbox">
+                        <img src="./sourceImages/icons/pencil-solid.svg" alt="pencilIcon">
+                        <img src="./sourceImages/icons/trash-solid.svg" alt="deleteIcon">
+                    </div>
                 </div>
             </div>
 
