Breakpoint before adding the alert method

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    
     <section class="container">
 
         <h1>To do input</h1>
@@ -44,8 +44,8 @@
 
                     <div class="icons">
                         <input type="checkbox">
-                        <img src="./sourceImages/icons/pencil-solid.svg" alt="pencilIcon" onclick="">
-                        <img src="./sourceImages/icons/trash-solid.svg" alt="deleteIcon" onclick="">
+                        <img src="./sourceImages/icons/pencil-solid.svg" alt="pencilIcon" >
+                        <img src="./sourceImages/icons/trash-solid.svg" alt="deleteIcon">
                     </div>
                 </div>
 
@@ -93,7 +93,16 @@
             </div>
         </div>
     </section>
-    
+
+    <div class="alert" id="confirmOpreation">
+        <div class="alertContent">
+            <h1>Are you sure you want to do the opreation?<Br><Br>(Cant undo changes)</h1>
+            <div>
+                <button id="confirmOpreationButton">Confirm</button>
+                <button id="cancelOpreationButton" >Cancel</button>
+            </div>
+        </div>
+    </div>
 
 
 
