Added function to edit task content

--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
         </div>
     </div>
 
+    <div class="alertEdit" id="confirmEdit">
+        <div class="alertEditContent">
+            <h1>Rename Task</h1>
+                <input id="alertEditContentInput" type="text" placeholder="New content">
+            <div>
+                <button class="alertEditConfirmButton" id="confirmOpreationButtonEdit">Confirm</button>
+                <button id="cancelOpreationButtonEdit" >Cancel</button>
+            </div>
+        </div>
+    </div>
 
 
 
