Made text input checking maintainbable

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input id="mainInput" placeholder="New todo">
                     
                 </div>
-                <p id="inputNote">Task is less than 5 characters !!</p>
+                <p id="inputNote">Input must be longer than 5 characters and doesnt start with a number</p>
                 <br>
                 <button id="inputButton">Add new Task</button>
             </div>
